# Meerkat2-average

./: CMakeLists.txt  Exceptions.h  InputParameters.cpp  InputParameters.h  IntensityData.cpp  IntensityData.h  LICENSE  Symmetry.cpp  Symmetry.h  main.cpp  test_meerkat_average.cpp  test_meerkat_average.h
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
cmake/: CBFlib.cmake  hdf5.cmake
lib/cxxtest/build_tools/cmake/: CxxTest.cmake
test_files/: inp.mrk  test.h5  visual-test.h5
